@@ -10,24 +10,24 @@ using namespace Niflib;
 
 extern "C"
 {
-#include "../qhull/src/qhull_a.h"
+#include "../qhull/src/libqhull/qhull_a.h"
 
-#include "../qhull/src/libqhull.c"
-#include "../qhull/src/mem.c"
-#include "../qhull/src/qset.c"
-#include "../qhull/src/geom.c"
-#include "../qhull/src/merge.c"
-#include "../qhull/src/poly.c"
-#include "../qhull/src/io.c"
-#include "../qhull/src/stat.c"
-#include "../qhull/src/global.c"
-#include "../qhull/src/user.c"
-#include "../qhull/src/poly2.c"
-#include "../qhull/src/geom2.c"
-#include "../qhull/src/userprintf.c"
-#include "../qhull/src/usermem.c"
-#include "../qhull/src/random.c"
-#include "../qhull/src/rboxlib.c"
+#include "../qhull/src/libqhull/libqhull.c"
+#include "../qhull/src/libqhull/mem.c"
+#include "../qhull/src/libqhull/qset.c"
+#include "../qhull/src/libqhull/geom.c"
+#include "../qhull/src/libqhull/merge.c"
+#include "../qhull/src/libqhull/poly.c"
+#include "../qhull/src/libqhull/io.c"
+#include "../qhull/src/libqhull/stat.c"
+#include "../qhull/src/libqhull/global.c"
+#include "../qhull/src/libqhull/user.c"
+#include "../qhull/src/libqhull/poly2.c"
+#include "../qhull/src/libqhull/geom2.c"
+#include "../qhull/src/libqhull/userprintf.c"
+#include "../qhull/src/libqhull/usermem.c"
+#include "../qhull/src/libqhull/random.c"
+#include "../qhull/src/libqhull/rboxlib.c"
 };
 
 using namespace Niflib;
